// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Post Component Handle updating the inputs for the title and the content on the page 1`] = `
<body>
  <div>
    <section
      class="createPost"
      data-testid="test-id-create-post"
    >
      <form
        class="form  false"
        data-testid="test-id-create-post-form"
      >
        <h2
          class="title title__error"
        >
          Error: Please fix the errors below
        </h2>
        <div
          class="field "
        >
          <label
            class="label false"
            data-testid="test-id-create-post-title-label"
            for="title"
            id="titleLabel"
          >
            Title*
          </label>
          <input
            aria-labelledby="titleLabel "
            class="input  false"
            data-testid="test-id-create-post-title-input"
            name="title"
            placeholder="Please enter your title"
            required=""
            type="text"
            value=""
          />
        </div>
        <div
          class="field "
        >
          <section
            class="carousel"
          >
            <div
              class="carousel__chosen-image"
            >
              <button
                class="button button__primary"
                data-testid="test-id-carousel-choose-button"
                type="submit"
              >
                Choose this image
              </button>
              <p>
                Chosen image:
                 None
              </p>
            </div>
            <p
              class="carousel__error-text"
            >
              Error: Please choose an image
            </p>
            <div
              class="swiper__error"
              data-autoplay="{\\"delay\\":5000,\\"pauseOnMouseEnter\\":true}"
              data-centeredslides="true"
              data-loop="true"
              data-modules="[{},{},{},{}]"
              data-navigation="true"
              data-pagination="{\\"type\\":\\"bullets\\",\\"clickable\\":true}"
              data-slidesperview="1"
              data-testid="swiper"
              data-thumbs="{\\"swiper\\":null}"
            >
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="2B.png"
                  class="swiper__image"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Kratos.png"
                  class="swiper__image"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Alfira-face.jpg"
                  class="swiper__image"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Shanalotte.jpg"
                  class="swiper__image"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Edelgard.jpg"
                  class="swiper__image"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Tiefling.jpg"
                  class="swiper__image"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
            </div>
            <div
              data-breakpoints="{\\"480\\":{\\"slidesPerView\\":3,\\"spaceBetween\\":5},\\"768\\":{\\"slidesPerView\\":4,\\"spaceBetween\\":10},\\"1024\\":{\\"slidesPerView\\":5,\\"spaceBetween\\":10}}"
              data-modules="[{},{},{}]"
              data-slidesperview="1"
              data-spacebetween="10"
              data-testid="swiper"
              data-watchslidesprogress="true"
            >
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="2B.png"
                  class="swiper__thumbnail"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Kratos.png"
                  class="swiper__thumbnail"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Alfira-face.jpg"
                  class="swiper__thumbnail"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Shanalotte.jpg"
                  class="swiper__thumbnail"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Edelgard.jpg"
                  class="swiper__thumbnail"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
              <div
                data-testid="swiper-slide"
              >
                <img
                  alt="Tiefling.jpg"
                  class="swiper__thumbnail"
                  draggable="false"
                  src="test-file-stub"
                />
              </div>
            </div>
          </section>
        </div>
        <div
          class="field "
        >
          <label
            class="label false"
            data-testid="test-id-create-post-content-label"
            for="content"
            id="contentLabel"
          >
            Content*
          </label>
          <textarea
            aria-labelledby="contentLabel"
            class="textarea  false"
            data-testid="test-id-create-post-content-input"
            name="content"
            placeholder="Please enter your content"
            required=""
            rows="3"
          />
        </div>
        <button
          class="button button__primary"
          data-testid="test-id-create-post-button"
          type="submit"
        >
          Submit
        </button>
      </form>
    </section>
  </div>
</body>
`;

exports[`Create Post Component Matches the snapshot 1`] = `
<section
  class="createPost"
  data-testid="test-id-create-post"
>
  <form
    class="form  false"
    data-testid="test-id-create-post-form"
  >
    <h2
      class="title false"
    >
      Create Post
    </h2>
    <div
      class="field "
    >
      <label
        class="label false"
        data-testid="test-id-create-post-title-label"
        for="title"
        id="titleLabel"
      >
        Title*
      </label>
      <input
        aria-labelledby="titleLabel "
        class="input  false"
        data-testid="test-id-create-post-title-input"
        name="title"
        placeholder="Please enter your title"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="field "
    >
      <section
        class="carousel"
      >
        <div
          class="carousel__chosen-image"
        >
          <button
            class="button button__primary"
            data-testid="test-id-carousel-choose-button"
            type="submit"
          >
            Choose this image
          </button>
          <p>
            Chosen image:
             None
          </p>
        </div>
        <div
          class="false"
          data-autoplay="{\\"delay\\":5000,\\"pauseOnMouseEnter\\":true}"
          data-centeredslides="true"
          data-loop="true"
          data-modules="[{},{},{},{}]"
          data-navigation="true"
          data-pagination="{\\"type\\":\\"bullets\\",\\"clickable\\":true}"
          data-slidesperview="1"
          data-testid="swiper"
          data-thumbs="{\\"swiper\\":null}"
        >
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="2B.png"
              class="swiper__image"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Kratos.png"
              class="swiper__image"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Alfira-face.jpg"
              class="swiper__image"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Shanalotte.jpg"
              class="swiper__image"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Edelgard.jpg"
              class="swiper__image"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Tiefling.jpg"
              class="swiper__image"
              draggable="false"
              src="test-file-stub"
            />
          </div>
        </div>
        <div
          data-breakpoints="{\\"480\\":{\\"slidesPerView\\":3,\\"spaceBetween\\":5},\\"768\\":{\\"slidesPerView\\":4,\\"spaceBetween\\":10},\\"1024\\":{\\"slidesPerView\\":5,\\"spaceBetween\\":10}}"
          data-modules="[{},{},{}]"
          data-slidesperview="1"
          data-spacebetween="10"
          data-testid="swiper"
          data-watchslidesprogress="true"
        >
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="2B.png"
              class="swiper__thumbnail"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Kratos.png"
              class="swiper__thumbnail"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Alfira-face.jpg"
              class="swiper__thumbnail"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Shanalotte.jpg"
              class="swiper__thumbnail"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Edelgard.jpg"
              class="swiper__thumbnail"
              draggable="false"
              src="test-file-stub"
            />
          </div>
          <div
            data-testid="swiper-slide"
          >
            <img
              alt="Tiefling.jpg"
              class="swiper__thumbnail"
              draggable="false"
              src="test-file-stub"
            />
          </div>
        </div>
      </section>
    </div>
    <div
      class="field "
    >
      <label
        class="label false"
        data-testid="test-id-create-post-content-label"
        for="content"
        id="contentLabel"
      >
        Content*
      </label>
      <textarea
        aria-labelledby="contentLabel"
        class="textarea  false"
        data-testid="test-id-create-post-content-input"
        name="content"
        placeholder="Please enter your content"
        required=""
        rows="3"
      />
    </div>
    <button
      class="button button__primary"
      data-testid="test-id-create-post-button"
      type="submit"
    >
      Submit
    </button>
  </form>
</section>
`;
